# simp-micro

./: .gitignore  CHANGELOG.md  EXPERIMENT_LOG.md  INSTRUCTIONS.md  Makefile  PROJECT_DOCUMENTATION.md  README.md  REVIEW_ALGORITHMS_VI.md  auxetic_first_second_representative.json  benchmark_gamma_sweep.py  main.tex  pyproject.toml  requirements.txt  run_gamma_sweep.sh
analysis/: __init__.py  _version.py  cli.py  conftest.py  dataset.py  image.py  report.py  utils.py
data/: Main.m  topK_backup.m
html/: index.html  inverse_auxetic_report.html
notebooks/: 01_convergence_analysis.ipynb  01_data_loading_and_quality_control.ipynb  02_image_metrics.ipynb  02_lhs_sensitivity_pareto.ipynb  02_performance_analysis_and_sensitivity.ipynb  03_auxetic_poisson.ipynb  03_detailed_inspection_and_design_recommendation.ipynb  04_phase4_surrogate_analysis.ipynb  05_phase5_cvae_analysis.ipynb  06_phase1_to_phase5_pipeline_summary.ipynb  cleaned_dataset.parquet  cleaned_dataset_preview.csv  gamma_sweep_analysis.ipynb  next_sweep_config.json  utils.py
outputs/: phase2_manuf_analysis.csv  report_simp_analysis.html
pipeline/: REVIEW_ALGORITHMS_VI.md  __init__.py  data_preparation_phase2.py  params.py  phase1_analyst.py  phase1_refine_params.py  phase1_screening.py  phase1_screening_parallel.py  phase2_tuning.py
simp/: README.md  __init__.py  config.py  main.py  run.py  runner.py  simp_workflow_guide.html
simp/core/: oc.py  (+6 more)
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_convergence.py  test_core_smoke.py  test_dataset.py  test_logger.py  test_phase1_analyst.py  test_phase1_refine_params.py  test_phase2_adaptive.py  test_phase2_coverage.py  test_phase2_params.py  test_phase2_runner.py  test_phase2_sampling.py  test_phase3_augment_symmetry.py  test_phase3_build_npz.py  test_phase3_finalize_dataset.py  test_phase3_scan_dataset.py  test_phase4_bootstrap_ci.py  test_phase4_dataset.py  test_phase4_evaluate.py  test_phase4_export_for_phase5.py  test_phase4_model.py  test_phase4_train.py  test_phase5_adversarial_dataset.py  (+11 more)
(+28708 files in other folders)
