[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simp-analyst"
version = "1.1.0"
description = "SIMP Topology Optimization for Periodic Material Microstructure Design"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SIMP Analyst Team"},
]
keywords = [
    "topology-optimization",
    "SIMP",
    "homogenization",
    "auxetic",
    "periodic-microstructure",
    "finite-element",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mechanical and Civil Engineering",
]

[project.urls]
Homepage = "https://github.com/your-org/Input_SIMP_Analyst"
Documentation = "https://github.com/your-org/Input_SIMP_Analyst/docs"
Repository = "https://github.com/your-org/Input_SIMP_Analyst"

[project.scripts]
simp = "simp.main:main"
simp-analysis = "analysis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
analysis = [
    "pandas>=2.0",
    "scikit-image>=0.20",
    "Pillow>=10.0",
    "seaborn>=0.13",
]
all = [
    "simp-analyst[dev,analysis]",
]

[tool.setuptools.packages.find]
include = ["simp*", "analysis*"]

[tool.setuptools.package-data]
simp = ["*.html"]

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
